# trello-to-discord-webhook-service

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml
.github/workflows/: docker-publish.yml  rust.yml
src/: config.rs  main.rs  models.rs  reporting.rs
src/commands/: authorize.rs  create_webhook.rs  get_boards.rs  get_webhooks.rs  mod.rs  start_webhook.rs
src/models/: discord.rs  mod.rs  trello_webhook.rs
